Fix recipe items stretching too far

--- a/SatisfactoryProductionator/Pages/Codex.razor.css
+++ b/SatisfactoryProductionator/Pages/Codex.razor.css
@@ -409,8 +409,8 @@ div.info-panel-recipe {
 }
 
 .info-panel-recipe-button {
-	padding-right: 10px;
-	padding-left: 10px;
+	padding-right: 7px;
+	padding-left: 7px;
 	margin-top: 2px;
 	margin-bottom: 2px;
 }
